--- a/.gitignore
+++ b/.gitignore
@@ -155,3 +155,4 @@ buildNumber.properties
 .flattened-pom.xml
 
 # End of https://www.gitignore.io/api/java,macos,maven,intellij+all
+src/main/docker/debezium/conf/cc.properties
